--- a/publications.html
+++ b/publications.html
@@ -21,6 +21,9 @@ title: Publications
 	<ol reversed="">
 		{% for publication in site.data.publications_papers-preprints %}
 			<li>
+				{% if publication.new %}
+				<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+				{% endif %}
 				<b>{{ publication.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 				{{ publication.year }}.</b>
 				{% capture lastchar %}{{ publication.title | slice:-1 }}{% endcapture %}
@@ -45,6 +48,9 @@ title: Publications
 <ol reversed="">
 	{% for publication in site.data.publications_papers-peer-reviewed %}
 		<li>
+			{% if publication.new %}
+			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			{% endif %}
 			<b>{{ publication.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
 			{% capture lastchar %}{{ publication.title | slice:-1 }}{% endcapture %}
@@ -88,6 +94,9 @@ title: Publications
 <ol reversed="">
 	{% for publication in site.data.publications_authored-monographs %}
 		<li>
+			{% if publication.new %}
+			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			{% endif %}
 			<b>{{ publication.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
 			<i>{{ publication.title }}</i>.
@@ -118,6 +127,9 @@ title: Publications
 <ol reversed="">
 	{% for publication in site.data.publications_edited-journals %}
 		<li>
+			{% if publication.new %}
+			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			{% endif %}
 			<b>{{ publication.editors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
 			{{ publication.title }}.
@@ -135,6 +147,9 @@ title: Publications
 <ol reversed="">
 	{% for publication in site.data.publications_edited-books %}
 		<li>
+			{% if publication.new %}
+			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			{% endif %}
 			<b>{{ publication.editors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
 			<i>{{ publication.title }}</i>.
@@ -160,6 +175,9 @@ title: Publications
 <ol reversed="">
 	{% for publication in site.data.publications_book-chapters %}
 		<li>
+			{% if publication.new %}
+			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			{% endif %}
 			<b>{{ publication.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
 			{{ publication.title }}.
@@ -195,6 +213,9 @@ title: Publications
 <ol reversed="">
 	{% for publication in site.data.publications_papers-further %}
 		<li>
+			{% if publication.new %}
+			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			{% endif %}
 			<b>{{ publication.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
 			{{ publication.title }}.
@@ -231,6 +252,9 @@ title: Publications
 <ol reversed="">
 	{% for publication in site.data.publications_conference-proceedings %}
 		<li>
+			{% if publication.new %}
+			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			{% endif %}
 			<b>{{ publication.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
 			{% capture lastchar %}{{ publication.title | slice:-1 }}{% endcapture %}
@@ -271,6 +295,9 @@ title: Publications
 <ol reversed="">
 	{% for publication in site.data.publications_project-reports %}
 		<li>
+			{% if publication.new %}
+			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			{% endif %}
 			<b>{{ publication.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
 			<i>{{ publication.title }}</i>.
@@ -288,6 +315,9 @@ title: Publications
 <ol reversed="">
 	{% for publication in site.data.publications_datasets %}
 		<li>
+			{% if publication.new %}
+			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			{% endif %}
 			<b>{{ publication.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
 			<i>{{ publication.title }}</i>.
