--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About me
   <div class="feature-grid">
     <div class="feature">
   <!-- <span class="image rounded"><img src="images/copyrighted/dv/P1000701-3.jpg" alt="" style="max-width: 100%; max-width: 150px;"/></span> -->
-  I am Senior Scientist and "Privatdozent" for Physical Geography and Hydrology at the Department of Geography, University of Zurich.
+  I am Group Leader for Mountain Hydrology and "Privatdozent" for Physical Geography and Hydrology at the Department of Geography, University of Zurich.
   <br>
   <br>
   My main research interest is centred on water in mountain areas, both in the Alps as well as world-wide.
