--- a/about.html
+++ b/about.html
@@ -4,19 +4,18 @@ title: About me
 ---
 
 <!-- <p style="font-size:130%; line-height: 120%;"> -->
-  <div class="feature-grid">
-    <div class="feature">
-  <!-- <span class="image rounded"><img src="images/copyrighted/dv/P1000701-3.jpg" alt="" style="max-width: 100%; max-width: 150px;"/></span> -->
-  I am Group Leader for Mountain Hydrology and "Privatdozent" for Physical Geography and Hydrology at the Department of Geography, University of Zurich.
-  <br>
-  <br>
-  My main research interest is centred on water in mountain areas, both in the Alps as well as world-wide.
-  Within this topic, I try to answer questions concerning water resources, natural hazards and hydrological processes.
-  I’m also particularly interested in changes in the Earth system, especially as regards climate and land use as well as demographic and socio-economic developments.
-  <br>
-  <br>
-  Every now and then I like to take pictures, you will a few of them around here as well.
+<div class="feature-grid">
+  <div class="feature">
+    <!-- <span class="image rounded"><img src="images/copyrighted/dv/P1000701-3.jpg" alt="" style="max-width: 100%; max-width: 150px;"/></span> -->
+    I am research group leader for mountain hydrology and "privatdozent" for physical geography and hydrology at the Department of Geography, University of Zurich.
+    <br>
+    <br>
+    My main research interest is centred on water in mountain areas, both in the Alps as well as world-wide.
+    Within this topic, I try to answer questions concerning water resources, natural hazards and hydrological processes.
+    I’m also particularly interested in changes in the Earth system, especially as regards climate and land use as well as demographic and socio-economic developments.
+    <br>
+    <br>
+    Every now and then I like to take pictures, you will a few of them around here as well.
   </div>
-  </div>
-</p>
-<!--  -->
+</div>
+<!-- </p> -->
