--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,10 @@ title: Publications
 	{% for publication in site.data.publications_papers-peer-reviewed %}
 		<li>
 			{% if publication.new %}
-			<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+			<div class="tooltip">
+				<font color="3B6FEF"><i class="fas fa-circle fa-sm"></i></font>
+				<span class="tooltiptext">added recently</span>
+			</div>
 			{% endif %}
 			<b>{{ publication.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
 			{{ publication.year }}.</b>
