--- a/publications.html
+++ b/publications.html
@@ -3,6 +3,8 @@ layout: default
 title: Publications
 ---
 
+<!--  for book chapters can use "authorship" field to e.g. add "contributions to" before list of editors (omit authors and chapter title, then) -->
+
 <!-- To add icons (below), have to remove underline from link style yet, and change text color -->
 <div class="container">
 	<ul class="icons">
