--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@ title: Projects
 <h2>Current projects (selection)</h2>
 <a class="anchor" id="curr"></a>
 <table>
-	{% for project in site.data.projects_current %}
+	{% for item in site.data.projects_current %}
 		{% include project_layout.html %}
 	{% endfor %}
 </table>
@@ -16,7 +16,7 @@ title: Projects
 <h2>Completed projects (selection)</h2>
 <a class="anchor" id="compl"></a>
 <table>
-	{% for project in site.data.projects_completed %}
+	{% for item in site.data.projects_completed %}
 		{% include project_layout.html %}
 	{% endfor %}
 </table>
