--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ title: About me
     My main research interest is centred on water in mountain areas, both in the Alps as well as world-wide.
     Within this topic, I try to answer questions concerning water resources, natural hazards and hydrological processes.
     I’m also particularly interested in changes in the Earth system, especially as regards climate and land use as well as demographic and socio-economic developments.
-    For the more applied aspects of my research I can draw from hands-on industry experience in flood estimation, hydraulic engineering and natural hazards assessments.
+    For the more applied aspects of my research I can draw from extensive industry and field experience in flood estimation, hydraulic engineering and natural hazards assessments.
     <br>
     <br>
     Every now and then I like to take pictures, you will a few of them around here as well.
