--- a/jobs.html
+++ b/jobs.html
@@ -7,7 +7,7 @@ title: Open positions
 <div class="feature-grid">
   <div class="feature">
     <!-- <span class="image rounded"><img src="images/copyrighted/dv/P1000701-3.jpg" alt="" style="max-width: 100%; max-width: 150px;"/></span> -->
-    <b>PhD position witin the project "Extreme Floods in Switzerland"</b><br><br>
+    <b>PhD position within the project "Extreme Floods in Switzerland"</b><br><br>
     The PhD project will involve working with a ready-made hydrometeorological modelling chain (weather generator, hydrological model, routing system) and exploring uncertainties and limitations in its results.
     Applicants should have a background in hydrology, meteorology, climatology, environmental sciences, environmental engineering or a closely related field.<br><br>
     Details and the form to apply are available under
