--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@ title: Publications
 <!-- To add icons (below), have to remove underline from link style yet, and change text color -->
 <div class="container">
 	<ul class="icons">
-		<li><a target="_blank" rel="noopener noreferrer" href="https://www.researcherid.com/rid/A-6720-2008" class="ai ai-researcherid ai-2x"></a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.webofscience.com/wos/author/record/1680894" class="ai ai-researcherid ai-2x"></a></li>
 		<li><a target="_blank" rel="noopener noreferrer" href="https://www.researchgate.net/profile/Daniel_Viviroli" class="ai ai-researchgate fa-2x"></a></li>
 		<li><a target="_blank" rel="noopener noreferrer" href="https://scholar.google.ch/citations?user=azF7iyMAAAAJ&hl=de" class="ai ai-google-scholar ai-2x"></a></li>
 		<li><a target="_blank" rel="noopener noreferrer" href="https://orcid.org/0000-0002-1214-8657" class="ai ai-orcid ai-2x"></a></li>
