--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ navtype: alt
 <div class="centered">
   <div class="strokeme" style="font-size: 150%;">
     <h2>
-      Natural Hazards in High Mountain Areas
+      Natural Hazards in High Mountains
     </h2>
   </div>
 </div>
