--- a/about.html
+++ b/about.html
@@ -7,22 +7,19 @@ title: About me
 <div class="feature-grid">
   <div class="feature">
     <!-- <span class="image rounded"><img src="images/copyrighted/dv/P1000701-3.jpg" alt="" style="max-width: 100%; max-width: 150px;"/></span> -->
-    I am research group leader for
-    <a target="_blank" rel="noopener noreferrer" href="https://www.geo.uzh.ch/en/research/Daniel-Viviroli.html">mountain hydrology</a>
+    I am a researcher at
+    <a target="_blank" rel="noopener noreferrer" href="https://eclim-research.ch/">EClim Group</a>
     in the
-    <a target="_blank" rel="noopener noreferrer" href="http://www.geo.uzh.ch/en/units/h2k">hydrology and climate unit (H<sub>2</sub>K)</a>
-    and "privatdozent" for physical geography and hydrology at the
+    <a target="_blank" rel="noopener noreferrer" href="http://https://www.geo.uzh.ch/en/units/3g.html">Glaciology and Geomorphodynamics unit (3G)</a>
+    at the
     <a target="_blank" rel="noopener noreferrer" href="https://www.geo.uzh.ch/en.html">Department of Geography</a>,
     University of Zurich.
     <br>
     <br>
-    My main research interest is centred on water in mountain areas, both in the Alps as well as world-wide.
-    Within this topic, I try to answer questions concerning water resources, natural hazards and hydrological processes.
-    I’m also particularly interested in changes in the Earth system, especially as regards climate and land use as well as demographic and socio-economic developments.
-    For the more applied aspects of my research I can draw from extensive industry and field experience in flood estimation, hydraulic engineering and natural hazards assessments.
+    My main research interest is centred on natural hazards in high mountains, in the European Alps and beyond.
+    Within this topic, I try to answer questions concerning fundamental process understanding, but also operative hazard management.
     <br>
     <br>
-    Every now and then I like to take pictures, you will a few of them around here as well.
   </div>
 </div>
 <!-- </p> -->
