--- a/photography.html
+++ b/photography.html
@@ -1,20 +1,20 @@
 ---
 layout: photography
-title: Photography
+title: Impressions from the field
 ---
 
 <div id="gallery"> <!--key to making poptrox work-->
 
 	<section id="main">
 		<div class="container">
-			<h2>Water</h2>
+			<h2>European Alps</h2>
 			<a class="anchor" id="wa"></a>
 		</div>
 	</section>
 
 	<section id="main" class="wrapper">
 		{% for image in site.static_files %}
-			{% if image.path contains 'fulls' and image.path contains 'water'%}
+			{% if image.path contains 'fulls' and image.path contains 'European Alps'%}
 				<article class="thumb">
 					<a href="{{ site.baseurl }}{{ site.image_water_fulls_loc }}/{{ image.name }}" class="image">
 						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_water_thumbs_loc }}/{{ image.name }}"/> -->
@@ -58,7 +58,7 @@ title: Photography
 
 	<section id="main" class="wrapper">
 		{% for image in site.static_files %}
-			{% if image.path contains 'fulls' and image.path contains 'weather' %}
+			{% if image.path contains 'fulls' and image.path contains 'Central Asia' %}
 				<article class="thumb">
 					<a href="{{ site.baseurl }}{{ site.image_weather_fulls_loc }}/{{ image.name }}" class="image">
 						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_weather_thumbs_loc }}/{{ image.name }}"/> -->
@@ -71,7 +71,7 @@ title: Photography
 		{% endfor %}
 	</section>
 
-	<section id="main">
+<!-- 	<section id="main">
 		<div class="container">
 			<h2 style="padding-top: 2em">Snow and ice</h2>
 			<a class="anchor" id="si"></a>
@@ -91,6 +91,6 @@ title: Photography
 				</article>
 			{% endif %}
 		{% endfor %}
-	</section>
+	</section> -->
 
 </div>
