--- a/publications.html
+++ b/publications.html
@@ -8,14 +8,14 @@ title: Publications
 <!-- To add icons (below), have to remove underline from link style yet, and change text color -->
 <div class="container">
 	<ul class="icons">
-		<li><a target="_blank" rel="noopener noreferrer" href="https://www.webofscience.com/wos/author/record/1680894" class="ai ai-researcherid ai-2x"></a></li>
-		<li><a target="_blank" rel="noopener noreferrer" href="https://www.researchgate.net/profile/Daniel_Viviroli" class="ai ai-researchgate fa-2x"></a></li>
-		<li><a target="_blank" rel="noopener noreferrer" href="https://scholar.google.ch/citations?user=azF7iyMAAAAJ&hl=de" class="ai ai-google-scholar ai-2x"></a></li>
-		<li><a target="_blank" rel="noopener noreferrer" href="https://orcid.org/0000-0002-1214-8657" class="ai ai-orcid ai-2x"></a></li>
-		<li><b><a target="_blank" rel="noopener noreferrer" href="https://www.zora.uzh.ch/cgi/search/archive/advanced?creators_name%2Feditors_name=Viviroli,%20D" style="font-size:11pt;line-height:0.95;display:block">Zurich Open Repository<br>and Archive (ZORA)</a></b></li>
+<!-- 		<li><a target="_blank" rel="noopener noreferrer" href="https://www.webofscience.com/wos/author/record/1680894" class="ai ai-researcherid ai-2x"></a></li> -->
+		<li><a target="_blank" rel="noopener noreferrer" href="https://www.researchgate.net/profile/Alessandro-Cicoira" class="ai ai-researchgate fa-2x"></a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=1GrOdR4AAAAJ&hl=en&oi=ao" class="ai ai-google-scholar ai-2x"></a></li>
+		<li><a target="_blank" rel="noopener noreferrer" href="https://orcid.org/0000-0002-0065-4464" class="ai ai-orcid ai-2x"></a></li>
+		<li><b><a target="_blank" rel="noopener noreferrer" href="https://www.zora.uzh.ch/cgi/search/archive/advanced?creators_name%2Feditors_name=%22Cicoira,%20Alessandro%22" style="font-size:11pt;line-height:0.95;display:block">Zurich Open Repository<br>and Archive (ZORA)</a></b></li>
 	<ul>
 </div>
-
+<!-- 
 <!-- Altmetric badges -->
 <script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
 <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
@@ -442,4 +442,5 @@ title: Publications
 		{% endif %}
 	{% endfor %}
 </ol>
+ -->
  -->
