--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@ title: Publications
 							<span class="tooltiptext">added recently</span>
 						</div>
 					{% endif %}
-					<b>{{ item.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+					<b>{{ item.authors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 					{{ item.year }}.</b>
 					{% capture lastchar %}{{ item.title | slice:-1 }}{% endcapture %}
 					{% if lastchar == "?" or lastchar == "!" %}
@@ -71,7 +71,7 @@ title: Publications
 						<span class="tooltiptext">added recently</span>
 					</div>
 				{% endif %}
-				<b>{{ item.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+				<b>{{ item.authors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 				{{ item.year }}.</b>
 				{% capture lastchar %}{{ item.title | slice:-1 }}{% endcapture %}
 				{% if lastchar == "?" or lastchar == "!" %}
@@ -135,7 +135,7 @@ title: Publications
 						<span class="tooltiptext">added recently</span>
 					</div>
 				{% endif %}
-				<b>{{ item.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+				<b>{{ item.authors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 				{{ item.year }}.</b>
 				<i>{{ item.title }}</i>.
 				{% if item.subtitle %}
@@ -173,7 +173,7 @@ title: Publications
 						<span class="tooltiptext">added recently</span>
 					</div>
 				{% endif %}
-				<b>{{ item.editors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+				<b>{{ item.editors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 				{{ item.year }}.</b>
 				{{ item.title }}.
 				<i>{{ item.journal }}</i>,
@@ -198,7 +198,7 @@ title: Publications
 						<span class="tooltiptext">added recently</span>
 					</div>
 				{% endif %}
-				<b>{{ item.editors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+				<b>{{ item.editors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 				{{ item.year }}.</b>
 				<i>{{ item.title }}</i>.
 				{% if item.series and item.volume %}
@@ -233,12 +233,12 @@ title: Publications
 				{% endif %}
 				{{ item.authorship }}
 				{% if item.authors %}
-					<b>{{ item.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+					<b>{{ item.authors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 						{{ item.year }}.</b>
 						{{ item.title }}.
 				{% endif %}
 				{% if item.editors %}
-					<b>{{ item.editors | replace:'Viviroli D','<u>Viviroli D</u>' }}{% if item.authors == null %}, {{ item.year }}{% endif %}.</b>
+					<b>{{ item.editors | replace:'Cicoira A','<u>Cicoira A</u>' }}{% if item.authors == null %}, {{ item.year }}{% endif %}.</b>
 				{% endif %}
 
 				{% if item.booktitle %}
@@ -296,7 +296,7 @@ title: Publications
 						<span class="tooltiptext">added recently</span>
 					</div>
 				{% endif %}
-				<b>{{ item.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+				<b>{{ item.authors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 				{{ item.year }}.</b>
 				{{ item.title }}.
 				{% if item.pages %}
@@ -347,7 +347,7 @@ title: Publications
 						<span class="tooltiptext">added recently</span>
 					</div>
 				{% endif %}
-				<b>{{ item.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+				<b>{{ item.authors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 				{{ item.year }}.</b>
 				{% capture lastchar %}{{ item.title | slice:-1 }}{% endcapture %}
 				{% if lastchar == "?" or lastchar == "!" %}
@@ -356,7 +356,7 @@ title: Publications
 					{{ item.title }}.
 				{% endif %}
 				{% if item.editors %}
-					<b>{{ item.editors | replace:'Viviroli D','<u>Viviroli D</u>' }}.</b>
+					<b>{{ item.editors | replace:'Cicoira A','<u>Cicoira A</u>' }}.</b>
 				{% endif %}
 				{% if item.booktitle %}
 					<i>{{ item.booktitle }}</i>.
@@ -404,7 +404,7 @@ title: Publications
 						<span class="tooltiptext">added recently</span>
 					</div>
 				{% endif %}
-				<b>{{ item.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+				<b>{{ item.authors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 				{{ item.year }}.</b>
 				<i>{{ item.title }}</i>.
 				{% if item.report %}
@@ -431,7 +431,7 @@ title: Publications
 						<span class="tooltiptext">added recently</span>
 					</div>
 				{% endif %}
-				<b>{{ item.authors | replace:'Viviroli D','<u>Viviroli D</u>' }},
+				<b>{{ item.authors | replace:'Cicoira A','<u>Cicoira A</u>' }},
 				{{ item.year }}.</b>
 				{{ item.title }}.
 				<i>{{ item.repository }}</i>,
