--- a/publications.html
+++ b/publications.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Projects
+title: Publications
 ---
 
-<h2>Current projects (selection)</h2>
+<h2>Current publications (selection)</h2>
 <a class="anchor" id="curr"></a>
 <table>
 	{% for item in site.data.projects_current %}
@@ -13,7 +13,7 @@ title: Projects
 
 <hr/>
 
-<h2>Completed projects (selection)</h2>
+<h2>Completed publications (selection)</h2>
 <a class="anchor" id="compl"></a>
 <table>
 	{% for item in site.data.projects_completed %}
