--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@ layout: default
 title: Publications
 ---
 
-<h2>Articles in peer-reviewed journals <small>(ISI listed)</small></h2>
+<h2>Articles in peer-reviewed journals <small></small></h2>
 <a class="anchor" id="JP"></a>
 <ol reversed="">
 	{% for item in site.data.publications_papers %}
@@ -65,7 +65,6 @@ title: Publications
 	{% endfor %}
 </ol>
 
-<hr/>
 
 
 <h2>Current publications (selection)</h2>
