--- a/about.html
+++ b/about.html
@@ -7,19 +7,28 @@ title: About me
 <div class="feature-grid">
   <div class="feature">
     <!-- <span class="image rounded"><img src="images/copyrighted/dv/P1000701-3.jpg" alt="" style="max-width: 100%; max-width: 150px;"/></span> -->
-    I am a researcher at
-    <a target="_blank" rel="noopener noreferrer" href="https://eclim-research.ch/">EClim Group</a>
-    in the
-    <a target="_blank" rel="noopener noreferrer" href="http://https://www.geo.uzh.ch/en/units/3g.html">Glaciology and Geomorphodynamics unit (3G)</a>
-    at the
-    <a target="_blank" rel="noopener noreferrer" href="https://www.geo.uzh.ch/en.html">Department of Geography</a>,
-    University of Zurich.
-    <br>
-    <br>
     My main research interest is centred on natural hazards in high mountains, in the European Alps and beyond.
     Within this topic, I try to answer questions concerning fundamental process understanding, but also operative hazard management.
     <br>
     <br>
+    Since 2021, I am a researcher in
+    <a target="_blank" rel="noopener noreferrer" href="https://eclim-research.ch/">EClim Group</a>
+    within the
+    <a target="_blank" rel="noopener noreferrer" href="http://https://www.geo.uzh.ch/en/units/3g.html">Glaciology and Geomorphodynamics unit (3G)</a>
+    at the
+    <a target="_blank" rel="noopener noreferrer" href="https://www.geo.uzh.ch/en.html">Department of Geography</a>
+    at the University of Zurich.
+    During the previous two years, I have been working 
+    in the 
+    <a target="_blank" rel="noopener noreferrer" href="https://www.epfl.ch/labs/slab/">SLAB</a> at EPFL Lausanne
+    and at the
+    <a target="_blank" rel="noopener noreferrer" href="https://www.unifr.ch/geo/geomorphology/en/">Geomorphology Research Group</a>
+    of the University of Fribourg.
+    <br>
+    <br>
+    <br>
+    
+    
   </div>
 </div>
 <!-- </p> -->
