--- a/fieldwork.html
+++ b/fieldwork.html
@@ -8,7 +8,7 @@ title: Fieldwork
 	<section id="main">
 		<div class="container">
 			<h2>European Alps</h2>
-			<a class="anchor" id="wa"></a>
+			<a class="anchor" id="fieldAlps"></a>
 		</div>
 	</section>
 
@@ -29,8 +29,8 @@ title: Fieldwork
 
 	<section id="main">
 		<div class="container">
-			<h2 style="padding-top: 2em">Mountains</h2>
-			<a class="anchor" id="mo"></a>
+			<h2 style="padding-top: 2em">Greenland</h2>
+			<a class="anchor" id="fieldGreen"></a>
 		</div>
 	</section>
 
@@ -51,8 +51,8 @@ title: Fieldwork
 
 	<section id="main">
 		<div class="container">
-			<h2 style="padding-top: 2em">Weather</h2>
-			<a class="anchor" id="we"></a>
+			<h2 style="padding-top: 2em">Central Asia</h2>
+			<a class="anchor" id="fieldCA"></a>
 		</div>
 	</section>
 
