--- a/fieldwork.html
+++ b/fieldwork.html
@@ -58,12 +58,12 @@ title: Fieldwork
 
 	<section id="main" class="wrapper">
 		{% for image in site.static_files %}
-			{% if image.path contains 'fulls' and image.path contains 'Central Asia' %}
+			{% if image.path contains 'CA' %}
 				<article class="thumb">
-					<a href="{{ site.baseurl }}{{ site.image_weather_fulls_loc }}/{{ image.name }}" class="image">
-						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_weather_thumbs_loc }}/{{ image.name }}"/> -->
+					<a href="{{ site.baseurl }}{{ site.image_CA_loc }}/{{ image.name }}" class="image">
+						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_CA_loc }}/{{ image.name }}"/> -->
 						<!-- <noscript> -->
-							<img src="{{ site.baseurl }}{{ site.image_weather_thumbs_loc }}/{{ image.name }}"/>
+							<img src="{{ site.baseurl }}{{ site.image_CA_loc }}/{{ image.name }}"/>
 						<!-- </noscript> -->
 					</a>
 				</article>
